--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body{
     padding: 0;
     font-size: 12px;
     margin: 0 auto;
-    color: #808080;
+    color: #1c1c1c;
     background-color: #FFFFFF;
 }
 
@@ -119,7 +119,7 @@ h1, h2, h3, h4{
 
 .menu{
     float: right;
-    padding: 0 20px 0 0 ;
+    padding: 0 20px 0 0;
 }
 .menu ul{
     list-style: none;
@@ -136,9 +136,33 @@ h1, h2, h3, h4{
     color:#f1f1f1;
     font-size: 16px;
  }
- .menu ul li .selected a{
+ .menu ul li.selected a{
     color:#1c1c1c;
  }
- .menu ul li a:hoover{
+ .menu ul li a:hover{
     color:#1c1c1c;
  }
+
+ /* Footer */
+ 
+.footer{
+    width: 100%;
+    height: 140px;
+    background-color: #82b7dc;
+}
+
+.social-networks{
+    text-align: center;
+}
+
+.social-networks > li {
+    display: inline;
+}
+
+.social-networks i{
+    font-size: 200%;
+    margin: 1.5%;
+    padding: 1%;
+    color: #1c1c1c;
+}
+ 
