--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
-
+* {box-sizing:border-box}
+.mySlides {display: none;}
+img {vertical-align: middle;}
 
 body{
     font-family: lato, sans-serif;
@@ -75,7 +77,7 @@ h1, h2, h3, h4{
 /* Logo and menu*/
 #wrap{
     margin: auto;
-    width: 1920px;
+    width: 1000px;
     padding: 0 0 40px 0;
 }
 .main_content{
@@ -87,7 +89,7 @@ h1, h2, h3, h4{
     background-color: #82b7dc;
 }
 .header_content{
-    width: 1920px;
+    width: 1000px;
     margin: auto;
     line-height: 140px;
 }
@@ -142,7 +144,43 @@ h1, h2, h3, h4{
  .menu ul li a:hover{
     color:#1c1c1c;
  }
-
+ /* Slideshow container */
+ .slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 1s ease;
+  }
+  
+  .active {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .text {font-size: 11px}
+  }
  /* Footer */
  
 .footer{
