--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,14 +106,14 @@ h1, h2, h3, h4{
     color:#f1f1f1;
 }
 .logo span{
-    font-size: 16px;
+    font-size: 14px;
     color: #f1f1f1;
 }
 .top_slogan{
     text-align: center;
     font-family: oswald, sans-serif;
     color: #808080;
-    font-size: 32px;
+    font-size: 30px;
     padding: 50px 150px;
     font-style: italic;
     line-height: 40px;
@@ -132,6 +132,10 @@ h1, h2, h3, h4{
     float: left;
     padding: 0 20px 0 20px;
     height: 35px;
+}
+.menu ul *{
+    margin:0;
+    padding:0;
 }
  .menu ul li a{
     font-family: lato, sans-serif;
@@ -156,6 +160,7 @@ h1, h2, h3, h4{
     height: 15px;
     width: 15px;
     margin: 0 2px;
+    text-align:center;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
@@ -177,10 +182,37 @@ h1, h2, h3, h4{
     to {opacity: 1}
   }
   
-  /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    .text {font-size: 11px}
-  }
+ /* Body Structure */
+ .section_one_three{
+    width: 320px;
+    float: left;
+    padding: 40px 0 0 40px;
+
+ }
+
+ .roundimg{
+    width:180px;
+    height: 180px;
+    display: block;
+    border-radius: 90px;
+    -moz-border-radius:90px;
+    -webkit-border-radius:90px;
+    -khtml-border-radius:90px;
+    margin:auto;
+    background-color: #808080;
+    text-align: center;
+    padding:30px 0 0 0;
+ }
+ .roundimg img{
+    margin:auto;
+    display:block;
+ }
+ h2.centered_title{
+    text-align: center;
+ }
+ p.centered_text{
+    padding:10px 20px;
+}
  /* Footer */
  
 .footer{
@@ -204,3 +236,8 @@ h1, h2, h3, h4{
     color: #1c1c1c;
 }
  
+
+ /* On smaller screens, decrease text size */
+ @media only screen and (max-width: 300px) {
+    .text {font-size: 11px}
+  }
