--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,37 @@ h1, h2, h3, h4{
  p.centered_text{
     padding:10px 20px;
 }
+
+/*Contact Form */
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: #3466aa;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #3466aa;
+  }
+  
+  .container {
+    border-radius: 5px;
+    padding: 20px;
+  }
  /* Footer */
  
 .footer{
