--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,13 +204,13 @@ h1, h2, h3, h4{
     -webkit-border-radius:90px;
     -khtml-border-radius:90px;
     margin:auto;
-    background-color: #808080;
+    background-color: #ffffff;
     text-align: center;
     padding:30px 0 0 0;
  }
  .roundimg img{
-    margin:auto;
-    display:block;
+    margin: auto;
+    display: block;
  }
  h2.centered_title{
     text-align: center;
@@ -232,7 +232,7 @@ input[type=text], select, textarea {
     resize: vertical;
   }
   
-  input[type=submit] {
+input[type=submit] {
     background-color: #3466aa;
     color: white;
     padding: 12px 20px;
@@ -241,11 +241,11 @@ input[type=text], select, textarea {
     cursor: pointer;
   }
   
-  input[type=submit]:hover {
+input[type=submit]:hover {
     background-color: #3466aa;
   }
   
-  .container {
+.container {
     border-radius: 5px;
     padding: 20px;
   }
@@ -253,10 +253,9 @@ input[type=text], select, textarea {
  
 .footer{
     width: 100%;
-    height: 140px;
+    height: 120px;
     background-color: #82b7dc;
 }
-
 .social-networks{
     text-align: center;
 }
@@ -266,10 +265,17 @@ input[type=text], select, textarea {
 }
 
 .social-networks i{
-    font-size: 200%;
-    margin: 1.5%;
-    padding: 1%;
-    color: #1c1c1c;
+    font-size: 30px;
+    padding: 10px;
+    color: #f1f1f1;
+    margin: 5px;
+}
+
+.copyright{
+    font-size: 12px;
+    margin: 5px;
+    padding: 10px;
+    color: #f1f1f1;
 }
 /*Media Queries*/
 
