--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,7 @@ padding: 5% 0 0 4%;
     .text {
         font-size: 20px
      }
-    ..menu ul li a{
+    .menu ul li a{
         font-size: 30px
      }
   }
