--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,11 +352,42 @@ padding: 5% 0 0 4%;
 
 
  /* On smaller screens, decrease text size */
- @media only screen and (max-width: 400px) {
+ @media only screen and (max-width: 500px) {
     .text {
         font-size: 20px
      }
-    .menu ul li a{
-        font-size: 30px
-     }
+ .menu{
+    float:left;
+    clear:both;
+    padding:0px 0 0px 0;
+    width:100%
+}
+.menu ul{
+    list-style:none;
+    margin: 0px;
+    padding: 0 20px 0 20px;
+}
+.menu ul *{
+    margin:0;
+    padding:0;
+}
+.menu ul li{
+    width: 100%;
+    float: left;
+    padding: 0px;
+    height: auto;
+    border-bottom:1px #f1f1f1 solid;
+    height: 35px;
+    line-height: 35px;
+}
+.menu ul li a{
+    color: #FFFFFF;
+    font-size: 25px;
+    padding: 0 0 0 10px;
+    display: block;
+    cursor: pointer;
+}
+.menu ul li a:hover{
+    color: #1c1c1c;
+}
   }
